--- a/static/scss/partials/_header.scss
+++ b/static/scss/partials/_header.scss
@@ -23,6 +23,7 @@
     }
     .header-svg,
     .header-svg-mobile {
+        overflow: visible;
         z-index: 1;
         position: absolute;
         pointer-events: none;
